<resources>
    <string name="app_name">WotS</string>
    <string name="app_name_long">WotS on the street</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Itaque hic ipse iam pridem est reiectus; Ita relinquet duas, de quibus etiam atque etiam consideret. Hosne igitur laudas et hanc eorum, inquam, sententiam sequi nos censes oportere? Cum audissem Antiochum, Brute, ut solebam, cum M.\n\nAt ille pellit, qui permulcet sensum voluptate. Ita enim vivunt quidam, ut eorum vita refellatur oratio. Contineo me ab exemplis. Non quaeritur autem quid naturae tuae consentaneum sit, sed quid disciplinae. Ac tamen hic mallet non dolere. Ita enim vivunt quidam, ut eorum vita refellatur oratio. Fortasse id optimum, sed ubi illud: Plus semper voluptatis?\n\nGerendus est mos, modo recte sentiat. Maximus dolor, inquit, brevis est.\n\nDuo Reges: constructio interrete. Murenam te accusante defenderem. Non quam nostram quidem, inquit Pomponius iocans; Non enim iam stirpis bonum quaeret, sed animalis. Nam illud vehementer repugnat, eundem beatum esse et multis malis oppressum. Nam, ut sint illa vendibiliora, haec uberiora certe sunt. Quod si ita se habeat, non possit beatam praestare vitam sapientia. Nemo nostrum istius generis asotos iucunde putat vivere. Ac tamen hic mallet non dolere. Sed emolumenta communia esse dicuntur, recte autem facta et peccata non habentur communia. At, illa, ut vobis placet, partem quandam tuetur, reliquam deserit.\n\nMihi enim erit isdem istis fortasse iam utendum. Inde sermone vario sex illa a Dipylo stadia confecimus. Cur ipse Pythagoras et Aegyptum lustravit et Persarum magos adiit? Sed quid sentiat, non videtis. Haec et tu ita posuisti, et verba vestra sunt.</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_category_categories">Categories</string>
    <string name="Money">Money</string>
    <string name="money">Money</string>
    <string name="sports">Sports</string>
    <string name="art">Art</string>
    <string name="politics">Politics</string>
    <string name="technology">Technology</string>
    <string name="home">Home</string>
    <string name="economics">Economics</string>
    <string name="download">download</string>
    <string name="share">share</string>
    <string name="offline">offline</string>
    <string name="db_checkbox_text">save it for later</string>
    <string name="saved_toast">smart move!</string>
    <string name="deleted_toast">fine! :/</string>
    <string name="nav_capsule">Capsule</string>
    <string name="capsule">Capsule</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="empty_login_error">Login cannot be empty</string>
    <string name="empty_password_error">Password cannot be empty</string>
    <string name="server_problem">Server encountered a problem</string>
    <string name="nav_news">News</string>
    <string name="my_news">My news</string>
    <string name="add_new">Add new</string>
    <string name="news_title">Title</string>
    <string name="news_body">Content</string>
    <string name="priority">Priority:</string>
    <string name="priority_normal">Normal</string>
    <string name="priority_high">High</string>
    <string name="priority_breaking">Breaking News</string>
    <string name="uploading">sending stuff to the headquarters..</string>
    <string name="uploading_title">Patience</string>
    <string name="upload_error">Uploading error</string>
    <string name="upload_ok">Uploading successful! Thanks :)</string>
    <string name="empty_title_error">Title cannot be empty</string>
    <string name="empty_content_error">Content cannot be empty</string>
    <string name="no_photo_error">Don\'t forget about the photo</string>
    <string name="checkin_login_dialog">Authorizing..</string>
    <string name="your_last_added">Your last added News:</string>
    <string name="passsword2">Repeat password</string>
    <string name="firstName">First name</string>
    <string name="last_name">Last name</string>
    <string name="register">Register</string>
    <string name="not_exact_passes_error">Passwords are different</string>
    <string name="empty_first_name_error">Field cannot be empty</string>
    <string name="empty_field_error">Field cannot be empty</string>
    <string name="login_unavailable">User already exists</string>
    <string name="to_short_pass_error">At least 6 characters</string>
    <string name="logout">Log out</string>
    <string name="logged_out">Logged out. We\'re gonna miss you :(</string>
    <string name="user">User:</string>
    <string name="last_login">Last login in:</string>
    <string name="no_news_added_yet">No news added yet</string>
    <string name="nothing_to_display">Nothing to display</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="no_news">No news to display</string>
    <string name="welcome_capsule">Welcome to your capsule</string>
    <string name="delete_question">Do you want to delete this news?</string>
    <string name="yes">Yeah</string>
    <string name="news_deleted">News item deleted :/</string>
    <string name="delete_action">Delete news</string>
    <string name="to_long_title">Title can\'t be longer than 65 characters</string>
    <string name="nav_login">Log in</string>
    <string name="about_app">About app</string>
    <string name="search">search</string>
    <string name="enter_phrase">Enter phrase here</string>
    <string name="search_records">Search results:</string>
    <string name="about">Welcome to WotS on the Street -  a news application using her own RESTFul API. You can view news provided by the backend server application along with creating your own news and posting them. To do so, we have to trust you first. If you don\'t post anything related to cats or soccer, you are free to go. </string>
    <string name="about_2">Project created in cooperation with Java Android course colleague using popular designing patterns and GIT workflow. Application uses token verification and saving to local SQLite database. Visual part designed according to material design principles.</string>


</resources>
