<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_capsule"
            android:icon="@drawable/ic_suitcase"
            android:title="@string/nav_capsule" />

    </group>

    <item android:title="@string/nav_category_categories">
        <menu>
            <item
                android:id="@+id/nav_economics"
                android:icon="@drawable/ic_money"
                android:title="@string/economics" />
            <item
                android:id="@+id/nav_sport"
                android:icon="@drawable/ic_bicycle"
                android:title="@string/sports" />
            <item
                android:id="@+id/nav_art"
                android:icon="@drawable/ic_brush"
                android:title="@string/art" />
            <item
                android:id="@+id/nav_politics"
                android:icon="@drawable/ic_sad"
                android:title="@string/politics" />
            <item
                android:id="@+id/nav_technology"
                android:icon="@drawable/ic_laptop"
                android:title="@string/technology" />
        </menu>
    </item>

</menu>