<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:icon="@drawable/ic_suitcase"
            android:id="@+id/nav_capsule"
            android:title="@string/nav_capsule" />
        <item
            android:icon="@drawable/ic_logout"
            android:id="@+id/nav_logout"
            android:title="@string/logout" />

    </group>

    <item android:title="@string/nav_news">
        <menu>
            <item
                android:icon="@drawable/ic_my_news"
                android:id="@+id/nav_my_news"
                android:title="@string/my_news" />
            <item
                android:icon="@drawable/ic_pencil"
                android:id="@+id/nav_add_new"
                android:title="@string/add_new" />
        </menu>
    </item>

</menu>