<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="4dp" />


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/title_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/news_title"
                android:inputType="text"
                android:maxLength="65" />

        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:minHeight="250dp"
        app:cardCornerRadius="2dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:animateLayoutChanges="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/content_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/news_body"
                android:inputType="textMultiLine" />

        </android.support.design.widget.TextInputLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:paddingBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_margin="6dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/priority"

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_marginLeft="12dp"
                    android:id="@+id/priority_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAlignment="textEnd" />

                </LinearLayout>


            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:cardCornerRadius="2dp">


        <LinearLayout
            android:layout_margin="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_category_categories" />

            <CheckBox
                android:id="@+id/pol_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/politics" />

            <CheckBox
                android:id="@+id/tech_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/technology" />

            <CheckBox
                android:id="@+id/econ_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/economics" />

            <CheckBox
                android:id="@+id/sports_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports" />

            <CheckBox
                android:id="@+id/art_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/art" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal">


        <Button
            android:id="@+id/add_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/add_new" />
    </LinearLayout>


</LinearLayout>


